# jazzy-fish

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  setup.cfg
.devcontainer/: devcontainer.json  onCreateCommand.bash
.github/workflows/: python-checks.yml  python-publish.yml  python-tests.yml
dictionary/1/: adjective.txt  adverb.txt
dictionary/2/: adverb.txt
dictionary/3/: noun.txt
dictionary/5/: adverb.txt
python/: .pypirc  Dockerfile  Makefile  README.md  pyproject.toml  requirements-cli.txt  requirements-dev.txt  setup.py
python/scripts/: build-docker-image.bash  create-venv.bash  delete-venv.bash  detect-and-set-tag-version.bash  verify-publish.bash  verify-test-publish.bash
python/src/encoder/: __init__.py   encoder.py
python/src/encoder/resources/01234_30e45fe/: checksums.sha1  stats_2.txt  stats_3.txt  stats_4.txt
python/src/encoder/resources/012_d188dfc/: checksums.sha1  stats_2.txt  stats_3.txt  stats_4.txt
python/src/encoder/resources/024_30c1b03/: checksums.sha1  stats_2.txt  stats_3.txt  stats_4.txt
python/src/jazzy_fish/: __init__.py  __init__.py   encoder.py
python/src/jazzy_fish_tools/: __init__.py   clean_dictionary.py  generate_wordlists.py  helpers.py
python/src/jazzy_fish_tools/resources/: ignored.txt
python/src/preprocessor/: __init__.py   clean_dictionary.py  generate_wordlists.py  generate_words.py  helpers.py
python/src/scripts/: verify_install.py
python/tests/: __init__.py  conftest.py  test_decode.py  test_encode.py  test_generator.py  test_int_generate_sequence.py  test_select.py
wordlists/1/: noun.txt  verb.txt
wordlists/2/: adjective.txt  noun.txt  verb.txt
wordlists/3/: verb.txt
wordlists/4/: adjective.txt
wordlists/5/: noun.txt  verb.txt
